# confit2canard

./: .gitignore  Makefile  README.md  pyproject.toml
.circleci/: config.yml
confit2canard/: __init__.py  __main__.py  config.py  node.py  vault.py
tests/: test_config.py  test_vault.py  test_vaulted_config.py
tests/clear/: keys.yml  logging.yml  overrides.yml  robin.json
tests/secrets/: keys.yml
